# limasoft_crm

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
crm/: models.py  urls.py  views.py
crm/management/commands/: populate_data.py  seeder.py
crm/migrations/: 0001_initial.py
crm/templates/crm/: base.html  customer_list.html
docker/: Dockerfile  entrypoint.sh
limasoftcrm_project/: asgi.py  settings.py  urls.py  wsgi.py
