[tool.poetry]
name = "reprofetus"
version = "0.1.0"
description = "Proyecto de clinica básico para reprofetus"
authors = [
    "Jeanpiere Solis <ejemplo@gmail.com>",
    "Jeanfranco Gonzales <jeanfranco211@gmail.com>"
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"                  # Framework principal
python-decouple = "^3.8"           # Para manejar configuraciones con .env
dj-database-url = "^2.3.0"         # Simplificar configuración de bases de datos
pillow = "^11.0.0"                 # Manejar imágenes en Django
whitenoise = "^6.8.2"              # Servir archivos estáticos en producción
psycopg2-binary = "^2.9.10"        # Driver PostgreSQL
django-extensions = "^3.2.3"       # Extensiones adicionales para Django
djangorestframework = "^3.15.0"    # Framework DRF para APIs

[tool.poetry.group.development.dependencies]
django-debug-toolbar = "^4.4.6"    # Depuración en desarrollo
ipdb = "^0.13.13"                  # Depuración interactiva en consola
tqdm = "^4.67.0"                   # Barras de progreso para procesos largos
pytest = "^7.4.2"                  # Framework para pruebas
pytest-django = "^4.5.2"           # Integración pytest-Django
django-browser-reload = "^1.17.0"  # Recarga automática en desarrollo

[tool.poetry.group.testing.dependencies]
coverage = "^7.2.0"                # Medir cobertura de pruebas
pytest-cov = "^4.0.0"              # Complemento de cobertura para pytest
factory-boy = "^3.3.1"             # Crear datos ficticios para pruebas

[tool.poetry.group.production.dependencies]
gunicorn = "^23.0.0"               # Servidor WSGI para producción
whitenoise = "^6.8.2"              # Servir archivos estáticos en producción
cloudinary = "^1.29.0"             # Manejar medios con Cloudinary (opcional)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
